// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders Layout for the "/" view 1`] = `

<gui-layout>
  <gui-sidebar-provider defaultopen="true">
    <gui-app-sidebar>
    </gui-app-sidebar>
    <gui-sidebar-inset>
      <gui-header>
      </gui-header>
      <gui-dashboard>
      </gui-dashboard>
    </gui-sidebar-inset>
    <gui-toaster>
    </gui-toaster>
  </gui-sidebar-provider>
</gui-layout>

`;

exports[`renders Layout for the "/create-new-project" view 1`] = `

<gui-layout>
  <gui-sidebar-provider defaultopen="true">
    <gui-app-sidebar>
    </gui-app-sidebar>
    <gui-sidebar-inset>
      <gui-header>
      </gui-header>
      <gui-create-new-project>
      </gui-create-new-project>
    </gui-sidebar-inset>
    <gui-toaster>
    </gui-toaster>
  </gui-sidebar-provider>
</gui-layout>

`;

exports[`renders Layout for the "/error" view 1`] = `

<gui-layout>
  <gui-sidebar-provider defaultopen="true">
    <gui-app-sidebar>
    </gui-app-sidebar>
    <gui-sidebar-inset>
      <gui-header>
      </gui-header>
      <gui-error-found>
      </gui-error-found>
    </gui-sidebar-inset>
    <gui-toaster>
    </gui-toaster>
  </gui-sidebar-provider>
</gui-layout>

`;

exports[`renders Layout for the "/explore" view 1`] = `

<gui-layout>
  <gui-sidebar-provider defaultopen="true">
    <gui-app-sidebar>
    </gui-app-sidebar>
    <gui-sidebar-inset>
      <gui-header>
      </gui-header>
      <gui-explorer>
      </gui-explorer>
    </gui-sidebar-inset>
    <gui-toaster>
    </gui-toaster>
  </gui-sidebar-provider>
</gui-layout>

`;

exports[`renders Layout for the "/help" view 1`] = `

<gui-layout>
  <gui-sidebar-provider defaultopen="true">
    <gui-app-sidebar>
    </gui-app-sidebar>
    <gui-sidebar-inset>
      <gui-header>
      </gui-header>
      <gui-help-selectors>
      </gui-help-selectors>
    </gui-sidebar-inset>
    <gui-toaster>
    </gui-toaster>
  </gui-sidebar-provider>
</gui-layout>

`;

exports[`renders Layout for the "/help/selectors" view 1`] = `

<gui-layout>
  <gui-sidebar-provider defaultopen="true">
    <gui-app-sidebar>
    </gui-app-sidebar>
    <gui-sidebar-inset>
      <gui-header>
      </gui-header>
      <gui-help-selectors>
      </gui-help-selectors>
    </gui-sidebar-inset>
    <gui-toaster>
    </gui-toaster>
  </gui-sidebar-provider>
</gui-layout>

`;

exports[`renders Layout for the "/labels" view 1`] = `

<gui-layout>
  <gui-sidebar-provider defaultopen="true">
    <gui-app-sidebar>
    </gui-app-sidebar>
    <gui-sidebar-inset>
      <gui-header>
      </gui-header>
      <gui-labels>
      </gui-labels>
    </gui-sidebar-inset>
    <gui-toaster>
    </gui-toaster>
  </gui-sidebar-provider>
</gui-layout>

`;

exports[`renders Layout for the "/queries" view 1`] = `

<gui-layout>
  <gui-sidebar-provider defaultopen="true">
    <gui-app-sidebar>
    </gui-app-sidebar>
    <gui-sidebar-inset>
      <gui-header>
      </gui-header>
      <gui-queries>
      </gui-queries>
    </gui-sidebar-inset>
    <gui-toaster>
    </gui-toaster>
  </gui-sidebar-provider>
</gui-layout>

`;
